--- a/masonry-demo/bower.json
+++ b/masonry-demo/bower.json
@@ -6,6 +6,7 @@
     "underscore": "~1.7.0",
     "jquery": "~1.11.1",
     "modernizr": "~2.8.3",
-    "normalize-scss": "~3.0.1"
+    "normalize-scss": "~3.0.1",
+    "jquery-infinite-scroll": "~2.0.2"
   }
 }
