--- a/go/server/Makefile
+++ b/go/server/Makefile
@@ -10,3 +10,10 @@ stop:
 	- pkill -f "./bin/wiki_daemon"
 	- pkill -f "^./app\$$"
 	@ echo "$$(tput setaf 6)Killed Go Wiki daemon$$(tput sgr 0)"
+clean:
+	go clean
+build:
+	make clean && go build app.go
+install:
+	cp config/config.gcfg.example config/config.gcfg
+	go get gopkg.in/mgo.v2 code.google.com/p/gcfg
