Sanitize incoming messages Because the internet proved it couldn't behave itself

--- a/socketio/package.json
+++ b/socketio/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "express": "^4.13.4",
     "socket.io": "^1.4.4"
+  },
+  "dependencies": {
+    "sanitize-html": "^1.11.3"
   }
 }
