--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,2 +1,5 @@
 FROM nginx:1.21.3-alpine
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+WORKDIR /var/www/html
+
+COPY . .
+COPY ./docker/nginx/default.conf /etc/nginx/conf.d/default.conf
