--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ x-common: &common
     - .:/var/www/html
 
 services:
-  web:
+  frontend:
     <<: *common
     build:
       context: .
@@ -13,7 +13,7 @@ services:
     ports:
       - "8080:80"
 
-  php:
+  backend:
     <<: *common
     build:
       context: .
